<resources>
    <string name="app_name">AndroidIoT</string>
    <string name="add_device">Add device</string>
    <string name="add_image">Add image</string>
    <string name="back_button">Back button</string>
    <string name="configure_button">Configure button</string>
    <string name="ssid">SSID</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="connect">Connect</string>
    <string name="stop_reading">Stop reading</string>
    <string name="start_reading">Start reading</string>
    <string name="connection_status">Connection status</string>
    <string name="device_name">Device Name</string>
    <string name="mac">Mac:</string>
    <string name="please_choose_your_device_from_the_list_below">Choose your device from the list below!</string>
    <string name="uuid">UUID:</string>
    <string name="remove_item">Remove item</string>
</resources>