<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/form_back_button"
            android:contentDescription="@string/back_button"
            android:src="@drawable/arrow_clockwise" />

        <EditText
            android:id="@+id/ssidEditText"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:ems="10"
            android:textColor="@color/black"
            android:inputType="text"
            android:text="@string/ssid"
            android:importantForAutofill="yes"/>

        <EditText
            android:id="@+id/wifiPasswordEditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:ems="10"
            android:textColor="@color/black"
            android:text="@string/password"
            android:textColorHint="@color/main"
            android:textColorHighlight="@color/main"
            android:textColorLink="@color/main"
            android:importantForAutofill="yes" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

        <TextView
            android:id="@+id/connectionStatusTextView"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/connection_status"
            android:autoSizeMinTextSize="65dp" />

        <Button
            android:id="@+id/connectButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_reading"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/stopButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stop_reading"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>