<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/deviceName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:elegantTextHeight="true"
        android:ems="10"
        android:text="@string/device_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_above="@+id/uuid"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/deviceName"
        android:background="@drawable/form_back_button"
        android:contentDescription="@string/remove_item"
        android:src="@drawable/trash" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_alignParentBottom="true"
        android:background="@color/main" />

    <TextView
        android:id="@+id/macAddress"
        android:layout_width="149dp"
        android:layout_height="53dp"
        android:layout_above="@+id/divider"
        android:layout_below="@+id/deviceName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:text="@string/mac"
        android:textColor="@color/main" />


    <TextView
        android:id="@+id/uuid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/divider"
        android:layout_below="@+id/deviceName"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="-1dp"
        android:ems="10"
        android:text="@string/uuid"
        android:textColor="@color/main" />

</RelativeLayout>